# sphinx-autorun

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  LICENCE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  index.rst
sphinx_autorun/: __init__.py  pycon.py
